force-app/main/default/objects/SMQS_Party_Relationship_Role__mdt/SMQS_Party_Relationship_Role__mdt.object-meta.xml
<CustomObject>
    <description>These metadata types represent a list of suggested roles that then can be chosen by a Salesforce admin in a flow to create.</description>
    <label>Suggested Party Relationship Role</label>
    <pluralLabel>Suggested Party Relationship Roles</pluralLabel>
</CustomObject>