force-app/main/default/objects/SMQS_Party_Relationship_Role__mdt/fields/Create_Inverse_Role_Automatically__c.field-meta.xml
<CustomField>
    <fullName>Create_Inverse_Role_Automatically__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Inverse Role Automatically</label>
    <type>Checkbox</type>
</CustomField>