force-app/main/default/objects/SMQS_Party_Relationship_Role__mdt/fields/Default_Hierarchy_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Hierarchy_Type__c</fullName>
    <inlineHelpText>Used to populate Hierarchy Type on Contact Contact Relationship and Account Account Relationship.

Specifies the hierarchy between groups that are related. For example, select parent if the group in Related Account reports to or is included within the group in Account.

For example, a group is related to another group as a parent, peer, or child.</inlineHelpText>
    <label>Default Hierarchy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Peer</fullName>
                <default>true</default>
                <label>Peer</label>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>