force-app/main/default/objects/SMQS_Party_Relationship_Role__mdt/fields/Related_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Role_Name__c</fullName>
    <label>Related Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>