force-app/main/default/objects/SMQS_Party_Relationship_Role__mdt/fields/Relationship_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Object_Type__c</fullName>
    <label>Relationship Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact_Contact_Relationship</fullName>
                <default>true</default>
                <label>Contact_Contact_Relationship</label>
            </value>
            <value>
                <fullName>Account_Account_Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>